Update and rename v3black to v3black.css

--- a/v3black.css
+++ b/v3black.css
@@ -1,5 +1,5 @@
 /* ВЫ МОЖЕТЕ ПОМЕНЯТЬ ШРИФТ НА ЛЮБОЙ ДРУГОЙ УСТАНОВЛЕННЫЙ */
-body {font-family: "allbeyondworldv3"}
+body {font-family: "allBeyondworldv3"}
 
 
 /* ЦВЕТ ТЕКСТА*/
